--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
   </style>
   <body>
-    <canvas id="app"></canvas>
+    <canvas id="app" tabindex="0"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
