basic hud system

--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
     body {
       margin: 0;
       height: 100%;
+      overflow: hidden;
     }
-    #app {
+    canvas {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    #game {
+      z-index: 0;
       width: 100%;
       height: 100%;
-      display: block;
+    }
+    #hud {
+      z-index: 1;
+      pointer-events: none;
     }
   </style>
   <body>
-    <canvas id="app" tabindex="0"></canvas>
+    <canvas id="game" tabindex="0"></canvas>
+    <canvas id="hud"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
